--- a/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-manager/taotao-manager-service/pom.xml
@@ -13,6 +13,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
+        <!--service要运行肯定要依赖mapper-->
         <dependency>
             <groupId>com.taotao</groupId>
             <artifactId>taotao-manager-mapper</artifactId>
