--- a/taotao-manager/taotao-manager-web/pom.xml
+++ b/taotao-manager/taotao-manager-web/pom.xml
@@ -38,5 +38,10 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
     </dependencies>
 </project>
