--- a/taotao-manager/pom.xml
+++ b/taotao-manager/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>druid</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <!-- 配置tomcat插件插件 -->
