--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ taotao-manager/taotao-manager-mapper/target
 taotao-manager/taotao-manager-pojo/target
 taotao-manager/taotao-manager-service/target
 taotao-manager/taotao-manager-web/target
+taotao-rest/target/
+taotao-portal/target/
