--- a/taotao-portal/pom.xml
+++ b/taotao-portal/pom.xml
@@ -69,6 +69,13 @@
             <artifactId>solr-solrj</artifactId>
         </dependency>
 
+        <!-- 单元测试 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
