--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ taotao-manager/taotao-manager-service/target
 taotao-manager/taotao-manager-web/target
 taotao-rest/target/
 taotao-portal/target/
+*.bak
+*.iml
