--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>taotao-common</module>
         <module>taotao-manager</module>
         <module>taotao-rest</module>
+        <module>taotao-search</module>
     </modules>
     <packaging>pom</packaging>
 
