--- a/taotao-manager/taotao-manager-web/src/main/resources/resource/resource.properties
+++ b/taotao-manager/taotao-manager-web/src/main/resources/resource/resource.properties
@@ -10,3 +10,8 @@ FTP_BASEPATH=/home/ftpuser/www/images
 
 #基础路径
 IMAGE_BASE_URL=http://192.168.56.6/images/
+
+#服务层基础url
+
+REST_BASE_URL=http://localhost:8081/rest
+REST_CONTENT_SYNC_URL=/cache/sync/content/
