--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ taotao-manager/taotao-manager-service/target
 taotao-manager/taotao-manager-web/target
 taotao-rest/target/
 taotao-portal/target/
+taotao-sso/target/
+taotao-solr/target/
 *.bak
 *.iml
