--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>taotao-manager</module>
         <module>taotao-rest</module>
         <module>taotao-search</module>
+        <module>taotao-sso</module>
     </modules>
     <packaging>pom</packaging>
 
